--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@
 html,
 body {
     overflow-x: hidden;
+    font-family: 'Roboto';
 }
 .h1,
 .h2,
@@ -164,7 +165,8 @@ header .slogan_main {
     font-size: 18px;
     color: #fff;
     font-weight: 500;
-    padding: 18px 0 0 80px;
+    padding: 0 35px 0 0px;
+    margin-top: -10px;
 }
 .hl-address span {
     display: block;
@@ -174,7 +176,7 @@ header .slogan_main {
     margin: 0 auto;
     text-align: center;
     position: relative;
-    background: url(../images/bg-box-1.jpg) center top no-repeat, url(../images/bg-box-2.jpg) center 990px no-repeat,url(../images/bg-box-3.jpg) center top repeat-y;
+    background: url(../images/bg-box-1.jpg) center top no-repeat, url(../images/bg-box-2.jpg) center 820px no-repeat,url(../images/bg-box-3.jpg) center top repeat-y;
 }
 .social {
     text-align: right;
@@ -503,21 +505,23 @@ main .modal-body {
     /* border: 1px solid #fff; */
     position: relative;
     z-index: 999;
-    /* padding: 50px 30px 20px 20px; */
+    padding: 0 70px 0 140px;
     border-radius: 10px;
-    background: url(../images/bg-form.png) center top no-repeat;
-    width: 483px;
-    height: 566px;
+    background: url(../images/bg-agenda.png) center top no-repeat;
+    width: 590px;
+    height: 546px;
     margin: 0 auto;
 }
 .register .table-responsive .title {
     color: #431d0c;
-    font-size: 28px;
+    font-size: 24px;
     text-align: center;
     text-transform: inherit;
     margin-bottom: 10px;
     font-family: 'Roboto';
     font-weight: bold;
+    line-height: 1.2;
+    border-bottom: 1px solid #431d0c;
 }
 .logo-wr{
     position: relative;
@@ -530,23 +534,25 @@ main .modal-body {
 .register .table > thead > tr > td,
 .register .table > thead > tr > th {
     border-top: 1px solid rgba(221, 221, 221, 0);
-    color: #fff;
-    font-family: 'Roboto Condensed';
+    color: #000000;
+    /*font-family: 'Roboto Condensed';*/
     font-size: 14px;
-    padding: 10px 8px;
+    padding: 5px 8px;
+    font-weight: bold;
 }
 .register .table > tbody > tr > td:nth-child(1) {
     min-width: 110px;
     text-align: center;
 }
 .register .table > tbody > tr > td:nth-child(2) {
-    font-size: 12px;
+    font-size: 13px;
     text-align: left;
 }
 .register .max-width {
-    max-width: 1030px;
     margin: 0 auto;
     padding-top: 20px;
+    position: relative;
+    left: -30px;
 }
 .register-map {
     padding: 40px 20px 0;
@@ -558,7 +564,7 @@ main .modal-body {
     z-index: 999;
 }
 .register .table {
-    margin-top: 30px;
+    margin-top: 15px;
 }
 .register form {
     background: url(../images/bg-form.png) center top no-repeat;
@@ -566,6 +572,7 @@ main .modal-body {
     height: 566px;
     padding: 65px 60px 60px 50px;
     margin: 0 auto;
+    margin-top: -10px;
 }
 .register form .form-control {
     height: 52px;
@@ -662,20 +669,24 @@ main .modal-body {
 #lof_go_top:hover {
     opacity: 1;
 }
+.gioi-thieu-thay-co{
+    position: relative;
+}
 .gioi-thieu-thay-co .bg-title-re{
     background: url(../images/bg-gap-go.png) top center no-repeat;
     width: 615px;
     height: 109px;
-    margin-top: 80px;
+    margin-top: 15px;
     position: relative;
     left: 35px;
+    z-index: 999;
 }
 .gioi-thieu-thay-co .bg-title-re span{
     display: block;
+    font-weight: bold;
+    line-height: 1.3;
 }
-.gioi-thieu-thay-co .cta-1 .bgcta {
-    padding-top: 38px;
-}
+
 .remove {
     background: url(../images/remove.png) center no-repeat;
     width: 38px;
@@ -710,28 +721,39 @@ main .modal-body {
     position: relative;
     padding: 65px 50px;
 }
+.bg-gach .modal-dialog{
+    background: url(../images/popup-success.png) center no-repeat;
+    width: 852px;
+}
+.bg-gach .modal-content{
+    max-width: 100%;
+    height: auto;
+}
+.modal{
+    z-index: 9999;
+}
 .popup {
-    /*background: url(../images/popup.jpg) center no-repeat;*/
-    /*width: 600px;*/
-    /*height: 500px;*/
+    /* background: url(../images/popup-success.png) center no-repeat; */
+    /* width: 600px; */
+    /* height: 409px; */
+    margin: 0 auto;
     position: relative;
     text-align: center;
-    padding: 50px 10px 80px;
-    font-family: 'Roboto Condensed';
+    padding: 20px 62px 0px 45px;
     font-weight: 400;
     font-size: 15px;
     color: #000;
-    background: #fff;
+    /* background: #fff; */
     border-radius: 10px;
 }
 
 .popup .title {
     color: #e52520;
-    font-family: iCielPony;
-    font-size: 30px;
+    /*font-family: iCielPony;*/
+    font-size: 26px;
     text-transform: uppercase;
     text-align: center;
-    font-weight: 400;
+    font-weight: bold;
 }
 .popup .text {
     position: relative;
@@ -747,49 +769,74 @@ main .modal-body {
     bottom: -55px;
 }
 .popup:after {
-    position: absolute;
-    content: '';
-    background: rgba(255, 255, 255, 0.7);
-    width: calc( 100% - 3px);
-    height: calc(100% - 75px);
-    z-index: -1;
-    left: 2px;
-    top: 43px;
+    /*position: absolute;*/
+    /*content: '';*/
+    /*background: rgba(255, 255, 255, 0.7);*/
+    /*width: calc( 100% - 3px);*/
+    /*height: calc(100% - 75px);*/
+    /*z-index: -1;*/
+    /*left: 2px;*/
+    /*top: 43px;*/
 }
 .img-box-1 {
     position: relative;
     z-index: 99;
     width: 854px;
-    height: 357px;
+    /*height: 357px;*/
     margin: 0 auto;
 }
+.img-box-1 > img{
+    padding-right: 40px;
+}
 .box-1 {
-    padding-top: 10px;
+    /*padding-top: 10px;*/
     position: relative;
+}
+.box-1:before {
+    content: '';
+    background: url(../images/bg-left.png) no-repeat;
+    width: 265px;
+    height: 1033px;
+    position: absolute;
+    left: 0;
+    top: 360px;
+    z-index: 9999;
 }
 .header{
     position: absolute;
 }
 .highlight{
-    padding-top: 15px;
+    /*padding-top: 15px;*/
+}
+.highlight .cta-1 .bgcta {
+    margin-top: -38px;
+    position: relative;
+    z-index: 99;
+    padding: 35px 18px;
+}
+.highlight .cta-1 .span1 {
+    font-size: 26px;
 }
 .bg-radius {
-    max-width: 910px;
+    max-width: 930px;
     margin: 0 auto;
-    margin-top: -18px;
+    margin-top: -84px;
+    position: relative;
+    z-index: 99;
+    left: -15px;
 }
 .bg-radius-item {
-    background: url("../images/bg-radius.png") no-repeat;
-    width: 301px;
-    height: 262px;
+    background: url("../images/bg-radius-v2.png") no-repeat;
+    width: 331px;
+    height: 222px;
     margin: 0 auto;
     /*display: table;*/
 }
 .bg-radius-item.bg-radius-item-1 .title span:nth-child(2){
-    font-size: 16px;
+    /*font-size: 16px;*/
 }
 .bg-radius-item.bg-radius-item-middle {
-    background: url("../images/bg-radius-2.png") no-repeat;
+    /*background: url("../images/bg-radius-2.png") no-repeat;*/
 }
 .bg-radius-item>div {
     /*display: table-cell;*/
@@ -797,28 +844,41 @@ main .modal-body {
     padding: 10px 25px;
 }
 .bg-radius-item .title {
-    font-size: 22px;
+    font-size: 24px;
     color: #e2000f;
     text-transform: uppercase;
     margin-bottom: 5px;
     font-family: 'Roboto';
     font-weight: bold;
-    padding-top: 20px;
+    padding-top: 12px;
 }
 .bg-radius-item .title span {
     display: block;
 }
 .bg-radius-item .des {
     font-family: 'Roboto';
-    font-size: 16px;
+    font-size: 14px;
     color: #000;
     line-height: 1.5;
+    padding: 0 5px;
 }
 .cta-1 .bgcta{
+    background: url(../images/cta-2.png) no-repeat;
+    width: 347px;
+    height: 151px;
+    padding: 25px 18px;
+}
+.register .cta-1 .bgcta, .gioi-thieu-thay-co .cta-1 .bgcta{
     background: url(../images/cta-1.png) no-repeat;
     width: 256px;
     height: 111px;
     padding: 25px 18px;
+}
+.register .cta-1 .span2, .gioi-thieu-thay-co .cta-1 .span2 {
+    font-size: 22px;
+}
+.gioi-thieu-thay-co .cta-1 .bgcta {
+    padding-top: 38px;
 }
 .cta-1 .span1{
     font-family: icielcadena;
@@ -827,33 +887,54 @@ main .modal-body {
 }
 .cta-1 .span2{
     font-family: 'Roboto';
-    font-size: 24px;
+    font-size: 34px;
     font-weight: bold;
     color: #000;
 }
 .box-2 .title {
-    font-family: Colossalis;
+    /*font-family: Colossalis;*/
     font-size: 40px;
     text-transform: uppercase;
     position: relative;
+    font-weight: bold;
 }
 .box-2 .title span{
-    display: block;
+    display: table-cell;
+    vertical-align: middle;
 }
 .bg-title-re {
-    background: url(../images/bg-gap-go-1.png) top center no-repeat;
-    width: 807px;
-    height: 109px;
+    background: url(../images/bg-gap-go-1-1.png) top center no-repeat;
+    width: 558px;
+    height: 96px;
     margin: 0 auto;
     color: #fcff00;
-    font-family: icielcadena;
+    /*font-family: icielcadena;*/
     font-size: 30px;
     position: relative;
     z-index: 99;
     -webkit-text-shadow: 0 5px 4px #222;
     text-shadow: 0 5px 4px #222;
     line-height: 1;
-    padding-top: 16px;
+    display: table;
+    padding-bottom: 5px;
+}
+.box-2 .bg-title-re:after{
+    content: '';
+    background: url(../images/thang-1.png) no-repeat;
+    width: 173px;
+    height: 177px;
+    position: absolute;
+    top: -57px;
+    right: -150px;
+}
+.gioi-thieu-thay-co .bg-title-re:after{
+    content: '';
+    background: url(../images/thang-2.png) no-repeat;
+    width: 173px;
+    height: 168px;
+    position: absolute;
+    top: -93px;
+    left: -100px;
 }
 .box-2 .title >span:nth-child(1) {
     position: absolute;
@@ -888,12 +969,96 @@ main .modal-body {
     z-index: 999;
 }
 .box-2{
-    padding-top: 60px;
+    padding-top: 20px;
 }
 .gioi-thieu-thay-co .title img{
     margin-top: 60px;
 }
-
+.gioi-thieu-thay-co:before{
+    content: '';
+    background: url(../images/bg-left-2.png) no-repeat;
+    width: 217px;
+    height: 492px;
+    left: 0;
+    bottom: -55px;
+    position: absolute;
+}
+.gioi-thieu-thay-co:after{
+    content: '';
+    background: url(../images/thang-3.png) no-repeat;
+    width: 93px;
+    height: 130px;
+    right: 120px;
+    bottom: 0;
+    position: absolute;
+}
+.gioi-thieu-thay-co .bg-title-re div {
+    display: table-cell;
+    vertical-align: middle;
+}
+.trai-chien-binh .modal-body{
+    background: url(../images/bg-popup.png) center bottom no-repeat;
+    width: 500px;
+    height: 630px;
+    margin: 0 auto;
+}
+.trai-chien-binh .cta-1 .bgcta, .bg-gach .cta-1 .bgcta{
+    width: 125px;
+    height: 55px;
+    background-size: 100%;
+    padding: 5px 18px;
+}
+.trai-chien-binh .cta-1{
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translate(-50%);
+    transform: translate(-50%);
+    bottom: 5px;
+}
+.trai-chien-binh .cta-1 .span2,.bg-gach .cta-1 .bgcta .span2 {
+    font-size: 20px;
+}
+.tcb-pd{
+    padding: 0 50px 0 70px;
+}
+.tcb-item:after {
+    content: '';
+    clear: both;
+    display: block;
+}
+.tcb-item-avatar {
+    float: left;
+    width: 20%;
+}
+.tcb-right {
+    float: left;
+    width: 80%;
+}
+.tcb-item-title {
+    background: url(../images/icon-sao.png) left top no-repeat;
+    color: #88000b;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 9px 0;
+    text-align: left;
+    padding-left: 30px;
+}
+.tcb-item-des {
+    text-align: left;
+    padding-left: 30px;
+    color: #000;
+}
+.tcb-title {
+    font-size: 20px;
+    color: #ff1200;
+    font-weight: bold;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.trai-chien-binh .modal-dialog {
+    margin-top: 0;
+}
 #myModal-thong-bao .modal-content {
     background: #fff;
     height: auto;
