--- a/css/styles.css
+++ b/css/styles.css
@@ -987,6 +987,11 @@ main .modal-body {
     bottom: -55px;
     position: absolute;
 }
+.wpcf7-mail-sent-ok{
+    color: green;
+    position: absolute;
+    bottom: 110px;
+}
 .gioi-thieu-thay-co:after{
     content: '';
     background: url(../images/thang-3.png) no-repeat;
@@ -1288,6 +1293,9 @@ main .modal-body {
     }
 }
 @media screen and (max-width: 767px) {
+    .wpcf7-mail-sent-ok{
+        bottom: 90px;
+    }
     .bg-title-re {
         width: 100%;
         background-size: 600px 100%;
